force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <pluralLabel>Integration Logs</pluralLabel>
    <nameField>
        <label>Log Number</label>
        <type>AutoNumber</type>
        <displayFormat>LOG-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>One row per failed or retried callout, for support triage.</description>
</CustomObject>