force-app/main/default/objects/Integration_Log__c/fields/Attempt__c.field-meta.xml
<CustomField>
    <fullName>Attempt__c</fullName>
    <label>Attempt</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>