force-app/main/default/objects/Integration_Log__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Text</type>
    <length>20</length>
    <description>RETRY_SCHEDULED, FAILED or NOT_FOUND.</description>
</CustomField>