force-app/main/default/objects/Integration_Log__c/fields/Record_Key__c.field-meta.xml
<CustomField>
    <fullName>Record_Key__c</fullName>
    <label>Record Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>